Created specification migration
