# src/modules/cars/useCases/createSpecification/CreateSpecificationController.ts
@@ -4,13 +4,13 @@ import { CreateSpecificationUseCase } from './CreateSpecificationUseCase';
 
 class CreateSpecificationController {
 
-    handle(request: Request, response: Response): Response {
+    async handle(request: Request, response: Response): Promise<Response> {
         try {
 
             const { name, description } = request.body;
 
             const createSpecificationUseCase = container.resolve(CreateSpecificationUseCase);
-            const specification = createSpecificationUseCase.execute({ name, description });
+            const specification = await createSpecificationUseCase.execute({ name, description });
 
             return response.status(201).json(specification);
 
